# Sec-AV

./: .gitignore  =2.4.5  =3.0.0  =4.2.0  =8.0.0  INSTALLATION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  build_complete_package.sh  build_wheel.sh  debug_logger.py  install.py  install_dependencies.py  launch_gui.py  launch_web.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  test_installation.py
Prashant918.egg-info/: PKG-INFO  SOURCES.txt
antivirus-ai/: R3ADm3-chnglg.txt  index.html
antivirus-ai/.api_zzStack/hndl7s_x/: go1_seC.Rt.js
antivirus-ai/.yKitPq/_core99_sYs/arc_FeA7X/: AvAi_d3_sC.js
antivirus-ai/.yKitPq/a_initq/: e1Home_Xntr.js  xNnavB4r.ctrl
antivirus-ai/xEnC0nfig09/: .envX
antivirus-ai/xEnC0nfig09/api_vaultK/: aPi_Ky_23f-3v2n.txt.enc
config/: default_config.json
quarantine/: Suspicious-Content-ransomware-network_Ompraskash - PAYMENT.pdf_1750438028
src/: display.py  option.py
src/antivirus/: advanced_engine.py  advanced_memory_scanner.py  behavioral_engine.py  cloud_intel.py  cloud_intelligence.py  communication_monitor.py  config.py  database.py  database_schema.py  detector.py  engine.py  logger.py  memory_scanner.py  ml_detector.py  network_scanner.py  network_security_scanner.py  phishing_detector.py  realtime_monitor.py  scanner.py  signatures.py
src/prashant918_antivirus/: __init__.py  cli.py  config.py  database.py  dependency_checker.py  exceptions.py  launcher.py  logger.py  main.py  utils.py
src/prashant918_antivirus/antivirus/: __init__.py  engine.py  ml_detector.py  signatures.py
src/prashant918_antivirus/api/: __init__.py  web_api.py
src/prashant918_antivirus/core/: engine.py  quarantine.py  realtime_monitor.py  scanner.py
src/prashant918_antivirus/database/: __init__.py  manager.py
src/prashant918_antivirus/gui/: main_window.py
src/prashant918_antivirus/service/: service_manager.py
src/prashant918_antivirus/upgrade/: auto_upgrader.py  config_migrator.py  dependency_updater.py  integrity_checker.py  rollback_manager.py  scheduler.py  system_adapter.py  update_server.py  version_manager.py
src/prashant918_antivirus/web/: app.py
src/prashant918_antivirus/web/static/css/: dashboard.css  quarantine.css  scan.css
src/prashant918_antivirus/web/static/js/: dashboard.js  quarantine.js  scan.js
src/prashant918_antivirus/web/templates/: dashboard.html  quarantine.html  scan.html
web/: index.html
web/assets/css/: notifications.css
web/assets/js/: api.js  main.js  security.js
yara_rules/: malware_generic.yar  ransomware.yar
