[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prashant918-advanced-antivirus"
version = "1.0.2"
description = "Advanced AI-powered antivirus system with behavioral analysis and cloud intelligence"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Prashant918", email = "prashant918@example.com" }]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

dependencies = [
    "psutil>=5.8.0,<6.0.0",
    "requests>=2.25.0,<3.0.0",
    "cryptography>=40.0.0,<43.0.0",
    "Pillow>=10.0.0,<11.0.0",
    "Flask>=3.0.0,<4.0.0",
    "Flask-CORS>=4.0.0,<5.0.0",
    "Werkzeug>=3.0.0,<4.0.0",
    "watchdog>=3.0.0,<5.0.0",
    "PyYAML>=6.0.0,<7.0.0",
    "jsonschema>=4.0.0,<5.0.0",
    "colorlog>=6.0.0,<8.0.0",
    "aiofiles>=0.8.0,<1.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "dnspython>=2.2.0,<3.0.0",
    "urllib3>=2.0.0,<3.0.0",
    "pyfiglet",
    "termcolor",
    "click",
    "rich",
    "packaging",
]

[project.optional-dependencies]
ml = [
    "numpy>=1.21.0,<2.0.0",
    "scikit-learn>=1.3.0,<1.5.0",
    "pandas>=2.0.0,<2.3.0",
]
advanced = [
    "scapy>=2.4.5,<3.0.0",
    "yara-python>=4.2.0,<5.0.0",
]
oracle = [
    "cx_Oracle>=8.0.0,<9.0.0",
]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "black>=23.0.0,<25.0.0",
    "flake8>=6.0.0,<8.0.0",
    "mypy>=1.0.0,<2.0.0",
]
all = [
    "prashant918-advanced-antivirus[ml,advanced,oracle,dev]"
]

[project.scripts]
prashant918-antivirus = "prashant918_antivirus.cli:main"
p918av = "prashant918_antivirus.cli:main"
prashant918-av-gui = "prashant918_antivirus.gui.main_window:main"
prashant918-av-service = "prashant918_antivirus.service.service_manager:main"

[project.urls]
Homepage = "https://github.com/prashant918/advanced-antivirus"
Repository = "https://github.com/prashant918/advanced-antivirus"
Issues = "https://github.com/prashant918/advanced-antivirus/issues"
Documentation